# astraios

./: .gitignore  ACK.md  Dockerfile  Makefile  README.md  asset-manifest.json  compose.dev.yaml  compose.yaml  flake.nix  index.html  package-lock.json  package.json
envoy/: Dockerfile  envoy.yaml  flake.nix
frontend/: .gitignore  Dockerfile.dev  Dockerfile.prod  buf.gen.yaml  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.mts
frontend/src/components/editor/: Cell.tsx
frontend/src/components/editor/actions/: useCellActionButton.tsx
frontend/src/components/editor/cell/: useRunCells.ts
frontend/src/components/editor/cell/code/: cell-editor.tsx
frontend/src/components/editor/controls/: Controls.tsx  worker-selector.tsx
frontend/src/components/editor/controls/run-environments/: run-environments-button.tsx  run-environments.tsx  runtime-selector.tsx  worker-selector.tsx
frontend/src/components/editor/renderers/: CellArray.tsx
frontend/src/components/variables/: variables-table.tsx
frontend/src/core/: App.tsx  MarimoApp.tsx
frontend/src/core/cells/: cells.ts  focus.ts  types.ts
frontend/src/core/cells/__tests__/: cells.test.ts
frontend/src/core/hotkeys/: hotkeys.ts
frontend/src/core/network/: requests-workers.ts  types.ts
frontend/src/core/variables/: types.ts
frontend/src/core/websocket/: useMarimoWebSocket.tsx
frontend/src/core/workers/: state.ts  tierkreis-runtime.ts  tierkreis_runtime.ts  types.ts
frontend/src/core/workers/runtime/: compilation.ts  execution.ts  state.ts  types.ts
frontend/src/hooks/: useRecentRuntimes.ts  useRecentWorkers.ts
frontend/src/stories/: cell.stories.tsx
kernels/python/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml  relax_protobuf.patch
kernels/python/astraios_py/: __main__.py  config.py  highlight.py  main.py  test_worker.py  worker.py
kernels/python/astraios_py/compile/: __init__.py  codegen.py  service.py  signature.py  test_service.py  types.py
kernels/python/protos-gen/: GENERATE_WITH_PROTOC  pyproject.toml
kernels/python/src/astraios_py/: __main__.py  codegen.py  compile.py  main.py  runtime.py  signature.py  test_compile.py  test_runtime.py  test_worker.py  typecast.py  worker.py
kernels/python/src/astraios_py/compile/: service.py  signature.py  test_service.py
plugins/astraios-py/: pyproject.toml
plugins/astraios-py/astraios_py/: compile.py  highlight.py  main.py  metadata.py  test_main.py  test_worker.py  worker.py
plugins/astraios-py/astraios_py/compile/: __init__.py  codegen.py  signature.py  types.py
plugins/astraios-rs/: Cargo.toml
plugins/astraios-rs/src/: compile.rs  main.rs  metadata.rs
protos/: compile.proto  runtime.proto  worker.proto
protos/tierkreis/: compile.proto  jobs.proto  runtime.proto  signature.proto  worker.proto
src/: App.tsx  Main.tsx  PluginManager.tsx  Toolbar.tsx
src/toolbar/: PluginManager.tsx  ScopeViewer.tsx
static/css/: main.013795fc.css  main.013795fc.css.map
static/js/: 453.a8032d5b.chunk.js  453.a8032d5b.chunk.js.map  main.49ae60d8.js  main.49ae60d8.js.map  main.a906318e.js  main.a906318e.js.map
