[tool.poetry]
name = "astraios-py"
version = "0.1.0"
description = ""
authors = ["Luca Mondada <luca@mondada.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
tierkreis = "^0.5.3"
sse-starlette = "^2.0.0"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
