[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astraios-py"
dynamic = ["version"]
description = 'Python kernel for Astraios'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Luca Mondada", email = "luca@mondada.net" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["grpcio-tools~=1.62", "protobuf", "mypy>=1.0"]

[project.urls]
Documentation = "https://github.com/lmondada/astraios"
Issues = "https://github.com/lmondada/astraios/issues"
Source = "https://github.com/lmondada/astraios"

[tool.hatch.version]
path = "astraios_py/__about__.py"

[tool.hatch.envs.default]
pre-install-commands = ["pip install -e tierkreis"]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pylint>=3.1.0",
  "black>=24.3.0",
]

[tool.hatch.envs.default.scripts]
serve = "python astraios_py/main.py"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]


[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/astraios_py tests}"

[tool.coverage.run]
source_pkgs = ["astraios_py", "tests"]
branch = true
parallel = true
omit = ["src/astraios_py/__about__.py"]

[tool.coverage.paths]
astraios_py = ["src/astraios_py", "*/astraios-py/src/astraios_py"]
tests = ["tests", "*/astraios-py/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
