[project]
name = "astraios-py"
version = "0.1.0"
description = "Python kernel for Astraios"
authors = [{ name = "Luca Mondada", email = "luca@mondada.net" }]
dependencies = [
    "betterproto>=2.0.0b6",
    "grpclib>=0.4.3rc0, <0.5",
    "tierkreis@git+https://github.com/lmondada/tierkreis.git@0cdea9755a91348aacb26400954ebf0af8943aae",
    "mypy>=1.0",
    "asyncio>=3.4.3",
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "betterproto[compiler]>=2.0.0b6",
    "watchdog[watchmedo]>=4.0.0",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]

[tool.rye.scripts]
gen-proto = "protoc -I ../../protos --python_betterproto_out=src/astraios_py/protos"
serve = "python src/astraios_py/__main__.py"
serve-dev = "watchmedo auto-restart --recursive --pattern=\"*.py\" --directory=\"src/astraios_py\" python -- -m astraios_py"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/astraios_py"]
