[tool.poetry]
name = "astraios-py"
version = "0.1.0"
description = ""
authors = ["Luca Mondada <luca@mondada.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
